--- a/exercise 2/index.html
+++ b/exercise 2/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/cloneDeep.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-  <title>Create a JSON</title>
-</head>
-<body>
-  <script src="index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Excercise 2</title>
+  </head>
+  <body>
+    <div class="container">
+      <button class="btn" id="btn">Show Result</button>
+      <div class="grid">
+        <div class="grid__item">
+          <h3 class="grid__item-title">JSON values</h3>
+          <pre id="values">
+          </pre>
+        </div>
+        <div class="grid__item">
+          <h3 class="grid__item-title">JSON</h3>
+          <pre id="json"></pre>
+        </div>
+        <div class="gri__item">
+          <h3 class="grid__item-title">Result</h3>
+          <pre id="code"></pre>
+        </div>
+      </div>
+    </div>
+    <script src="data.js"></script>
+    <script src="index.js"></script>
+  </body>
 </html>
