--- a/exercise 3/marvel-api/index.html
+++ b/exercise 3/marvel-api/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
         <title>Marvel App</title>
     </head>
     <body>
